--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "lodash": "*",
     "google-spreadsheet": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "promise": "*"
   }
 }
