Update app package.json manifest

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "HappyHeat",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.coffee"
   },
   "dependencies": {
     "express": "3.4.8",
