Added marked package to app to support markdown.
This will let us use the markdown: directive in jade templates.

--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "lodash": "*",
     "google-spreadsheet": "*",
     "stylus": "*",
-    "promise": "*"
+    "promise": "*",
+    "marked": "*"
   }
 }
